<resources>
    <string name="app_name">Cinemates</string>
    <string name="tab_home">Home</string>
    <string name="tab_favorites">Preferiti</string>
    <string name="tab_search">Cerca</string>
    <string name="tab_notification">Notifiche</string>
    <string name="tab_account">Account</string>
    <string name="search_field">Cerca un media, serie tv, attore...</string>
    <string name="search_button_text">Cerca</string>
    <string name="username_fiedl">Username</string>
    <string name="password_field">Password</string>
    <string name="genre_list">I più cercati</string>
    <string name="forgot_pw">Hai dimenticato la password?</string>
    <string name="submit_botton">Accedi</string>
    <string name="login_with_facebook">Accedi con Facebook</string>
    <string name="login_with_google">Accedi con Google</string>
    <string name="register_label">Sei nuovo? Registrati</string>
    <string name="label_recovery_pw">Inserisci il tuo indirizzo e-mail che hai fornito in fase di registrazione per ricevere le tue credenziali di accesso a Cinemates</string>
    <string name="title_activity_password_recovery">Recupera credenziali accesso</string>
    <string name="recovery_button">Recupera credenziali</string>
    <string name="login_required">Accedi per scoprire questa pagina</string>
    <string name="notification_center">Centro notifiche</string>
    <string name="my_account">Il mio account</string>
    <string name="Description">Descrizione</string>
    <string name="Review">Recensione</string>
    <string name="add_favourites">Aggiungi</string>
    <string name="movie_title">Titolo</string>
    <string name="movie_durata">Durata</string>
    <string name="movie_release_data">Release data</string>
    <string name="movie_valutation">Valutazione</string>
</resources>