<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    app:cnb_unselectedColor="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeItem"
        android:title="@string/tab_home"
        android:icon="@drawable/ic_home_24"
        app:cnb_backgroundColor="@color/blue_hype"
        app:cnb_iconColor="@color/white"
        app:cnb_textColor="@color/white" />

    <item
        android:id="@+id/favoritesItem"
        android:title="@string/tab_favorites"
        android:icon="@drawable/ic_favorite_24"
        app:cnb_backgroundColor="@color/blue_hype"
        app:cnb_iconColor="@color/white"
        app:cnb_textColor="@color/white" />

    <item
        android:id="@+id/searchItem"
        android:title="@string/tab_search"
        android:icon="@drawable/ic_search_24"
        app:cnb_backgroundColor="@color/orange_hype"
        app:cnb_iconColor="@color/white"
        app:cnb_textColor="@color/white" />

    <item
        android:id="@+id/notificationItem"
        android:title="@string/tab_notification"
        android:icon="@drawable/ic_notifications_24"
        app:cnb_backgroundColor="@color/blue_hype"
        app:cnb_iconColor="@color/white"
        app:cnb_textColor="@color/white" />

    <item
        android:id="@+id/accountItem"
        android:title="@string/tab_account"
        android:icon="@drawable/ic_login_24"
        app:cnb_backgroundColor="@color/blue_hype"
        app:cnb_iconColor="@color/white"
        app:cnb_textColor="@color/white" />

</menu>