<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_login_background"
    tools:context="com.example.cinemates.fragments.LoginFragment">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/formLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/ic_app_icon"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="32dp"
                        android:background="@drawable/custom_edit_text"
                        android:drawableStart="@drawable/ic_baseline_account_circle_24"
                        android:drawablePadding="12dp"
                        android:drawableTint="@color/purple_hype"
                        android:ems="10"
                        android:hint="@string/username_fiedl"
                        android:inputType="text"
                        android:paddingStart="12dp"
                        android:textAlignment="textStart"
                        android:textColor="@color/purple_hype"
                        android:textColorHint="@color/light_grey"
                        android:textSize="18dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="32dp"
                        android:background="@drawable/custom_edit_text"
                        android:drawableStart="@drawable/ic_baseline_lock_24"
                        android:drawablePadding="12dp"
                        android:drawableTint="@color/purple_hype"
                        android:ems="10"
                        android:hint="@string/password_field"
                        android:inputType="textPassword"
                        android:paddingStart="12dp"
                        android:textAlignment="textStart"
                        android:textColor="@color/purple_hype"
                        android:textColorHint="@color/light_grey"
                        android:textSize="18dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/username" />

                    <TextView
                        android:id="@+id/forgotPw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:clickable="true"
                        android:text="Hai dimenticato la password?"
                        android:textColor="@color/purple_hype"
                        android:textSize="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/password" />

                    <ImageView
                        android:id="@+id/showPw"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="32dp"
                        android:src="@drawable/ic_show_password"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/forgotPw"
                        app:layout_constraintTop_toBottomOf="@+id/password"
                        app:tint="@color/purple_hype" />

                    <Button
                        android:id="@+id/loginButton"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="32dp"
                        android:backgroundTint="@color/purple_hype"
                        android:text="@string/submit_botton"
                        android:textColor="@color/white"
                        app:cornerRadius="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/forgotPw" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="oppure"
                        android:textAlignment="center"
                        android:textColor="@color/purple_hype"
                        android:textSize="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

                    <Button
                        android:id="@+id/googleBtn"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="16dp"
                        android:backgroundTint="@color/google_color"
                        android:drawableLeft="@drawable/ic_icon_google"
                        android:drawableTint="@color/white"
                        android:text="Accedi con Google"
                        android:textColor="@color/white"
                        app:cornerRadius="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textView3" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:text="Non hai un account? Registrati"
                android:textAlignment="center"
                android:textColor="@color/purple_hype"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/formLogin" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>